# conduit

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.router  Makefile  PROJECT_TODO.md  README.md  RELEASING.md  ROADMAP_1.0.md  RUNNING.md  alembic.ini  check_pooler.md  conduit.yaml  docker-compose.openwebui.yml  migrate.sh  pricing.yaml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
benchmarks/: cost_savings_comparison.py  linucb_sherman_morrison_benchmark.py
claudedocs/: analysis_2025-11-22.md  session_2025-11-23_refactoring.md
conduit/: __init__.py
conduit/api/: __init__.py  app.py  auth.py  middleware.py  ratelimit.py  routes.py  service.py  sizelimit.py  validation.py
conduit/cache/: __init__.py  models.py  service.py
conduit/cli/: __init__.py  main.py
conduit/core/: __init__.py  config.py  config_schema.py  context_detector.py  database.py  defaults.py  exceptions.py  latency.py  lifecycle.py  model_discovery.py  models.py  postgres_state_store.py  pricing.py  pricing_manager.py  reward_calculation.py  state_store.py
conduit/engines/: __init__.py  analyzer.py  bandit.py  constraints.py  cost_filter.py  executor.py  hybrid_router.py  router.py
conduit/evaluation/: __init__.py  arbiter_evaluator.py
conduit/feedback/: __init__.py  adapters.py  blending.py  collector.py  detector.py  history.py  integration.py  models.py  signals.py  stores.py
conduit/models/: __init__.py  pricing_fetcher.py  registry.py
conduit/observability/: __init__.py  audit.py  evaluation_exporter.py  logging.py  metrics.py  setup.py  tracing.py
conduit/utils/: __init__.py  service_factory.py
conduit_litellm/: README.md  __init__.py  config.py  feedback.py  model_registry.py  strategy.py  utils.py
docker/: README.md  litellm_router_api.py  test_router.sh
docs/: ARCHITECTURE.md  AUDIT_LOG.md  BANDIT_ALGORITHMS.md  BANDIT_TRAINING.md  BENCHMARK_STRATEGY.md  BOOTSTRAP_STRATEGY.md  COLD_START.md  DESIGN_SPEC.md  EMBEDDING_PROVIDERS.md  FALLBACK.md  FAQ.md  FEEDBACK_INTEGRATION.md  GLOSSARY.md  HYBRID_ROUTING.md  HYBRID_ROUTING_ALGORITHMS.md  IMPLICIT_FEEDBACK.md  LITELLM_INTEGRATION.md  LITELLM_PLUGIN.md  MEASUREMENT_STRATEGY.md  MODEL_DISCOVERY.md  MODEL_NAMING.md  OPERATIONS.md  PCA_GUIDE.md  PRICING.md  PRICING_UPDATES.md  README.md  SCOPE.md  TROUBLESHOOTING.md  conf.py  index.md  latency-tracking.md  requirements.txt  success_metrics.md
docs/GITHUB_ISSUES/: README.md  issue_dueling_bandits.md  issue_neural_ucb.md  issue_pilot_style.md
examples/: README.md  arbiter_quality_measurement.py  basic_routing.py  basic_usage.py  caching.py  context_specific_priors.py  custom_config.py  evaluation_metrics_export.py  explicit_preferences.py  feedback_loop.py  hello_world.py  hybrid_routing.py  learning_demo.py  litellm_integration.py  multi_provider.py  pca_comparison.py  production_feedback.py  quickstart.py  routing_options.py  simple_router.py  state_persistence.py  with_constraints.py
examples/00_demo/: README.md  zero_config_demo.py
examples/01_quickstart/: hello_world.py  model_discovery.py  simple_router.py
examples/02_routing/: basic_routing.py  context_specific_priors.py  hybrid_routing.py  model_discovery.py  with_constraints.py
examples/03_optimization/: caching.py  combined_feedback.py  explicit_feedback.py  implicit_feedback.py  learning_demo_real.py  learning_demo_simulated.py
examples/04_litellm/: README.md  arbiter_quality_measurement.py  basic_usage.py  custom_config.py  demo.py  feedback_loop.py  learning_demo.py  multi_provider.py  performance_comparison.py
examples/04_pca/: pca_routing.py  pca_setup.py
examples/04_production/: failure_scenarios.py
examples/05_personalization/: explicit_preferences.py  user_preferences.py
examples/06_integrations/: langchain_integration.py
examples/integrations/: fastapi_service.py  gradio_demo.py  langchain_integration.py  llamaindex_integration.py
migrations/: 001_initial_schema.sql  002_implicit_feedback.sql  DEPLOYMENT.md  README.md  env.py
migrations/versions/: 02c6d98e3c62_remove_metadata_column.py  16742edc4c01_add_decision_audit_table.py  31e5ce1cbeda_add_model_prices_table.py  34c6749675ef_add_historical_pricing_support.py  704a5c62805b_add_bandit_state_table.py  9a6c8a59cb30_initial_schema.py  d330b3ea662d_add_evaluation_metrics_table.py  dbc1e805b8da_add_model_latencies_table.py
models/: pca.pkl
notes/: 2025-11-18_business_panel_analysis.md  2025-11-18_supabase_client_migration.md  2025-11-19_phase2_strategy_panel.md  sherman_morrison_optimization_2025-11-24.md
scripts/: install-hooks.sh  sync_pricing.py  sync_priors.py  truncate_database.py
scripts/git-hooks/: pre-push
tests/: conftest.py
tests/integration/: test_api_routes.py  test_auto_persistence.py  test_cache_integration.py  test_concurrent_updates.py  test_database_integration.py  test_evaluation_metrics_integration.py  test_feedback_loop.py  test_graceful_shutdown.py  test_hybrid_transition.py  test_litellm_learning.py  test_middleware.py
tests/regression/: __init__.py  test_examples.py
tests/unit/: test_analyzer.py  test_api_validation.py  test_app.py  test_app_factory.py  test_arbiter_evaluator.py  test_audit.py  test_auth.py  test_bandits_baselines.py  test_bandits_contextual_thompson_sampling.py  test_bandits_dueling.py  test_bandits_epsilon_greedy.py  test_bandits_linucb.py  test_bandits_non_stationary.py  test_bandits_thompson.py  test_bandits_ucb.py  test_cache_service.py  test_config.py  test_config_loaders.py  test_config_propagation.py  test_config_schema.py  test_configurable_algorithms.py  test_constraints.py  test_context_detector.py  test_context_priors.py  test_contract_validation.py  test_cost_filter.py  test_database.py  test_edge_cases.py  test_embeddings.py  test_evaluation_init.py  test_evaluation_metrics.py  test_executor.py  test_feedback_adapters.py  test_feedback_blending.py  (+38 more)
(+23 files in other folders)
